--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "wizotop",
   "version": "0.0.1",
   "description": "a project scaffolder",
-  "main": "index.js",
+  "main": "dist/index.js",
   "license": "MIT",
   "dependencies": {
     "ascii-art-font": "^1.0.2",
@@ -12,5 +12,16 @@
   },
   "bin": {
     "wizotop": "index.js"
+  },
+  "devDependencies": {
+    "@types/inquirer": "^7.3.0",
+    "@types/node": "^14.0.27",
+    "prettier": "2.0.5",
+    "tslint": "^6.1.3",
+    "typescript": "^3.9.7"
+  },
+  "scripts": {
+    "start": "tsc && node dist",
+		"prettier": "yarn prettier --write ."
   }
 }
