--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "target": "es6",
     "module": "commonjs",
-    "allowJs": false,
+    "allowJs": true,
     "checkJs": true,
     "declaration": true,
     "declarationMap": true,
